@@ -190,7 +190,7 @@ static void *task_routine(void*param)
     while(1) {
         
         total_dequeue += test_func(total_dequeue);
-        if(total_dequeue % 10000 == 0) {
+        if(total_dequeue % 1000000 == 0) {
             
             static unsigned int statistics_count = 0;
 
